All elements present, need placement and alignment fixes

--- a/application/client/src/components/Home.css
+++ b/application/client/src/components/Home.css
@@ -52,7 +52,8 @@ h4{
 
 .a-img{
     float:left;
-    width: 100%;
+    width: 40% !important;
+    height: 40% !important;
 }
 
 .a-img1{
